--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,11 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Welcome to Bayar{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
-<div class="container" style="margin-top: 50px; text-align: center;">
-    <h1>Welcome to Bayar</h1>
-    <p>This is your new Symfony application with a beautiful login/signup form.</p>
-    <p>Click on the "Login/Signup" link in the navigation bar to try out the form.</p>
+<style>
+    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+</style>
+
+<div class="example-wrapper">
+    <h1>Hello {{ controller_name }}! ✅</h1>
+
+    This is your application's home page after login.<br>
+    You are logged in as {{ app.user ? app.user.userIdentifier : 'Guest' }}.
+
 </div>
 {% endblock %} 
