second commit(crud+controle de saisie)

--- a/templates/reclamation/_form.html.twig
+++ b/templates/reclamation/_form.html.twig
@@ -1,4 +1,23 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+<div class="form-group">
+    {{ form_label(form.date_reclamation) }}
+    {{ form_widget(form.date_reclamation) }}
+    <div style="color: red;">{{ form_errors(form.date_reclamation) }}</div>
+</div>
+
+<div class="form-group">
+    {{ form_label(form.type) }}
+    {{ form_widget(form.type) }}
+    <div style="color: red;">{{ form_errors(form.type) }}</div>
+</div>
+
+<div class="form-group">
+    {{ form_label(form.message) }}
+    {{ form_widget(form.message) }}
+    <div style="color: red;">{{ form_errors(form.message) }}</div>
+</div>
+
+<button class="btn">{{ button_label|default('Enregistrer') }}</button>
+
 {{ form_end(form) }}
