--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -27,7 +27,7 @@
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.cin }}</td>
                 <td>{{ user.tel }}</td>
-                <td>{{ user.role }}</td>
+                <td>{{ user.roles }}</td>
                 <td>{{ user.mail }}</td>
                 <td>{{ user.password }}</td>
                 <td>
