--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -328,5 +328,10 @@
                 });
             });
         });
+        document.addEventListener("DOMContentLoaded", () => {
+            const sidebar = document.getElementById("admin-sidebar");
+            sidebar.classList.add("close");
+          });
+          
     </script>
 {% endblock %} 
