--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,10 +40,8 @@
                 <button type="submit" class="btn">Login</button>
                 <p>or login with social platforms</p>
                 <div class="social-icons">
-                    <a href="#"><i class='bx bxl-google' ></i></a>
-                    <a href="#"><i class='bx bxl-facebook' ></i></a>
-                    <a href="#"><i class='bx bxl-github' ></i></a>
-                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="{{ path('connect_google') }}" class="social-icon"><i class='bx bxl-google'></i></a>
+                    <a href="{{ path('connect_facebook') }}" class="social-icon"><i class='bx bxl-facebook'></i></a>
                 </div>
             </form>
         </div>
